Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>UNO Spiel – 2 Spieler</title>
+    <title>UNO Spiel – Multiple Player</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     <link rel="stylesheet" href="uno.css">
     <!-- CSS aus index.html entfernt, alles ist jetzt in uno.css -->
